# Neural-Network-from-scratch-in-C-

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  main  main.cpp
Image_Reader/: CMakeLists.txt  Image_Reader.cpp  Image_Reader.hpp  Makefile  Path_Loader.cpp  Path_Loader.hpp  cmake_install.cmake
NN/: CMakeLists.txt  Layer.cpp  Layer.hpp  Makefile  Neural_Network.cpp  Neural_Network.hpp  Timer.cpp  Timer.hpp  cmake_install.cmake
